Begin of second section Made the title and the cards, with a little issues...

--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 6px 128px 8px;
+    margin: 6px 200px 8px;
 }
 
 h1, h2 {
     color: #F9F1F8;
+}
+
+h1 {
+    font-size: 32px;
 }
 
 p {
@@ -33,13 +37,17 @@ a {
 
 .content {
     display: flex;
-    gap: 12px;
-    margin: 48px 128px 8px;
+    justify-content: space-between;
+    margin: 48px 200px 8px;
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 48px;
     font-weight: 900;
+}
+
+p {
+    font-size: 18px;
 }
 
 button {
@@ -56,4 +64,39 @@ button {
     height: 200px;
     background-color: #6D747D;
     color: #F9F1F8
+}
+
+.second-section {
+    margin-top: 180px;
+    background-color: #F9F1F8;
+}
+
+h3 {
+    text-align: center;
+    color: #1F2937;
+    font-size: 36px;
+}
+
+.second-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.container {
+    display: flex;
+    flex-direction: center;
+    gap: 18px;
+}
+
+.card {
+    border: 2px solid #3882F6;
+    border-radius: 10px;
+    width: 270px;
+    height: 300px;
+}
+
+.container p {
+    color:#1F2937;
 }
