--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ button {
     background-color: #3B82F6;
     border: 0px;
     border-radius: 10px;
-    color: #F9F1F8
+    color: #F9F1F8;
+    margin-bottom: 90px;
 }
 
 .img-content {
@@ -67,27 +68,27 @@ button {
 }
 
 .second-section {
-    margin-top: 180px;
     background-color: #F9F1F8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h3 {
+    margin-top: 70px;
     text-align: center;
     color: #1F2937;
     font-size: 36px;
 }
 
-.second-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-}
-
 .container {
     display: flex;
-    flex-direction: center;
-    gap: 18px;
+    justify-content: center;
+    gap: 56px;
+}
+
+.first-card, .second-card, .third-card, .fourth-card {
+    width: 270px;
 }
 
 .card {
@@ -99,4 +100,33 @@ h3 {
 
 .container p {
     color:#1F2937;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.third-section {
+    background: #E5E7EB;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.third-section p {
+    margin: 0px;
+    color: #1F2937;
+    font-size: 24px;
+    text-align: justify;
+}
+
+.italic-text {
+    font-style: italic;
+}
+
+.quote {
+    font-weight: 900;
+    padding-top: 20px;
+    padding-right: 64px;
+    align-self: self-end;
 }
