--- a/style.css
+++ b/style.css
@@ -130,3 +130,45 @@ h3 {
     padding-right: 64px;
     align-self: self-end;
 }
+
+.fourth-section {
+    height: 350px;
+    background-color: #F9F1F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square {
+    width: 1050px;
+    background-color: #3B82F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 72px;
+    border-radius: 10px;
+}
+
+.bold-text {
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.second-button {
+    border: 2px solid #F9F1F8;
+    border-radius: 10px;
+    
+}
+
+.text p {
+    margin: 0px;
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #F9F1F8;
+    height: 75px;
+}
