--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a {
     color: #F9F1F8;
 }
 
-.content {
+.first-section {
     display: flex;
     justify-content: space-between;
     margin: 48px 200px 8px;
@@ -64,7 +64,10 @@ button {
     width: 450px;
     height: 200px;
     background-color: #6D747D;
-    color: #F9F1F8
+    color: #F9F1F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .second-section {
@@ -157,7 +160,7 @@ h3 {
 .second-button {
     border: 2px solid #F9F1F8;
     border-radius: 10px;
-    
+    margin-top: 75px;
 }
 
 .text p {
